--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,42 +1,2 @@
-<div class="row">
-  <div class="col-xs-2">
-    <h4 class="text-primary">Fecha</h4>
-    <div class="form-group">
-      <label for="desde">Desde</label>
-      <input type="date" class="form-control" id="desde" placeholder="Desde" #desde >
-    </div>
-    <div class="form-group">
-      <label for="hasta">Hasta</label>
-      <input type="date" class="form-control" id="hasta" placeholder="Hasta" #hasta >
-    </div>
-    <div class="form-group">
-      <button type="button" class="btn btn-primary" (click)="onBuscar(desde, hasta)">Buscar</button>
-      <button type="button" class="btn btn-danger" (click)="onCancelar()">Cancelar</button>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th>#</th>
-      <th>Fecha</th>
-      <th>Kilos</th>
-      <th>Pesos</th>
-      <th>Ventas</th>
-      <th>Visitas</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let venta of ventas | async">
-      <th scope="row">{{ venta.uid}}</th>
-      <td>{{ venta.fecha }}</td>
-      <td>{{ venta.kilos | number:'1.2-2' }}</td>
-      <td>{{ venta.pesos | currency:'USD':true }}</td>
-      <td>{{ venta.ventas }}</td>
-      <td>{{ venta.visitas }}</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-
+<app-header></app-header>
+<router-outlet></router-outlet>
